--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -6,7 +6,7 @@
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
-						<a href="{{ site.baseurl }}/" title="Volver al Inicio" class="site-logo">{{ site.name }}</a>
+						<a href="{{ site.baseurl }}/" title="Volver al Inicio"><b>{{ site.name }}.net</b></a>
 						<a href="{{ site.baseurl }}/blog/categories" title="clasificado por categorías">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Todo sobre las Vacas Manguis">Nosotras</a>
 						<form action="https://www.google.com/cse"> 
