--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -114,7 +114,7 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
 /* Footer fixed */
-main { padding-top:1px;margin-bottom: 6px;}
+main { padding-top:1px;margin-bottom: 0;}
 #page-footer {box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
 #page-footer p {padding-bottom:69px;}
 .pagination {display:none;visibility:hidden;}
