--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,9 +25,9 @@
 		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 		
-	{% include partials/navigation/nav.html %}
 	<!-- Page content -->
 	<div class="page cover-page" id="page">
+		{% include partials/navigation/nav-scroll.html %}
 		<header id="page-header" class="about-cover anm-moveFromTop delay-200">
 			<div>
 					<div id="follow-yt" class="anm-fadeIn delay-800">
