--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -2,7 +2,7 @@
 
 <h3><u>Contenido Relacionado</u></h3> 
   
-<div id="rel-content" class="columns-5">
+<div id="rel-content">
 
   {% assign maxRelated = 5 %}
   {% assign minCommonTags =  1 %}
