--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -48,6 +48,10 @@ figure div iframe {width:100%;z-index: 100;}
 .PageNavigation h5 {margin:0;font-size:26px;margin-top:6px;}
 .PageNavigation h6 {margin:0;font-size:20px;margin-top:6px;line-height:1.3em;}
 
+#rel-content #rel {width:19.5%;float:left;margin:.2%;text-align:left;letter-spacing: 0.03em;border:thin solid var(--color-hard-grey);height:260px;}
+#rel-content #rel img.thumbnails {width:100%;height:115px;object-fit: cover;margin-bottom:12px;}
+#rel h6 {padding:6px;line-height:1.3em;}
+
 h3 a {color: var(--color-hardgrey) }
 h3 a:hover {color: var(--color-link); text-decoration:none;}
 
