--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -62,14 +62,18 @@ h3 a:hover {color: var(--color-link); text-decoration:none;}
 }
 
 @media (max-width: 1250px) {
+    #rel-content #rel {width:32%;height:260px;}
+	#rel-content #rel img.thumbnails {width:100%;height:180px;object-fit: cover;margin-bottom:12px;}
+	#rel h6 {font-size:16px;line-height:1.3em;}
 }
 @media (max-width: 1242px) {
 }
 @media (max-width: 768px) {
     .PageNavigation h5 {font-size:23px;margin-top:0;}
 	.PageNavigation h6 {font-size:15px;margin-top:2px;}
-
-
+    #rel-content #rel {width:100%;height:162px;}
+	#rel-content #rel img.thumbnails {width:49%;height:160px;object-fit: cover;padding-right:12px;margin-bottom:12px;}
+	#rel h6 {font-size:19px;line-height:1.3em;}
 }
 @media (max-width: 432px) {
 }
