--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -29,7 +29,7 @@
     
           <a href="{{ site.baseurl }}{{ post.url }}">
               <div id="rel">
-                  <img class="thumbnails" width="100%" src="http://img.youtube.com/vi/{{ post.img }}/0.jpg">
+                  <img class="thumbnails" width="100%" src="https://img.youtube.com/vi/{{ post.img }}/0.jpg">
                   <h6>{{ post.title }}</h6>
               </div>
           </a>
