--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -53,10 +53,18 @@
 .simple article nav a,
 #layout-simple:checked ~ #layout-result article nav a {
 	color: currentcolor ;text-decoration: none;
-	height: 69px;float:right;margin-top:-70px;margin-right:10px;
-	line-height: 62px;font-size:1.6em;
-	padding: 0;border-radius: 50%;
+	height: 69px;float:right;margin-top:-70px;margin-right:6px;
+	font-size:3.5em;
+	padding: 11px 3px 10px 10px;border-radius: 50%;
 	width: 69px;
+}
+.simple article nav a:hover,
+#layout-simple:checked ~ #layout-result article nav a:hover {
+    color: var(--color-red) ;
+}
+.simple article nav a:visited,
+#layout-simple:checked ~ #layout-result article nav a:visited {
+    color: var(--color-grey) ;
 }
 .simple em u a,
 #layout-simple:checked ~ #layout-result em u a {
