--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -131,10 +131,14 @@
 	background: #000;
 	border-color: transparent;
 	color: #fff;
-	line-height: 32px;
+	line-height: 25px;font-size:46px;
 	height: 48px;
-	padding: 8px 0;
+	padding: 6px 0 0 2px;
 	width: 48px;
+}
+.list article nav a:visited,
+#layout-list:checked ~ #layout-result article nav a:visited {
+    background-color: var(--color-grey) ;
 }
 @media (max-width: 767px) {
     .list article div img,
@@ -288,7 +292,7 @@
 .gallery article nav,
 #layout-gallery:checked ~ #layout-result article nav {
 	border-color: transparent;
-	font-size: 26px;
+	font-size: 48px;
 	line-height: 32px;
 	position: absolute;
 	bottom: 0; left: 0;
@@ -306,7 +310,10 @@
 	border-color: #fff;
 	color: #000;
 }	
-
+.gallery article nav a:visited,
+#layout-gallery:checked ~ #layout-result article nav a:visited {
+    color: var(--color-grey) ;
+}
 /* Cards view */
 
 .cards article,
