--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -6,7 +6,7 @@
 .post-dark#page-main h6, .post-dark#page-main h5, .post-dark#page-main h4, .post-dark#page-main h3, .post-dark#page-main h2, .post-dark#page-main p {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);}
 .post-dark#page-main {z-index:12;border-bottom:8px solid var(--color-red);}
 /* Nav */
-#post-nav div {	margin: 0 auto;padding: 0 225px;position: relative;width: 100%;max-width: var(--page-size);letter-spacing: 0.05em;}
+#post-nav div {	margin: 0 auto;padding: 0 0 0 225px;position: relative;width: 100%;max-width: var(--page-size);letter-spacing: 0.05em;}
 #post-nav {background: var(--color-soft-black) !important;border-bottom: none;color: var(--color-grey);height:60px;}
 #post-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;ont-size: 16px;}
 #post-nav .site-logo {font-family:'Mouse Memoirs', sans-serif;font-size: 25px;letter-spacing: 0.069em;}
