--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,7 +1,7 @@
 			<nav id="post-nav" class="nav-post">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo">
-						<div id="sitename">{{ site.name }}.net</div></a>
+						<i id="sitename">{{ site.name }}.net</i></a>
 					<a href="{{ site.baseurl }}{{ page.url }}" title="{{ page.title }}">{{ page.url }}</a>
 					  {% if page.next.url %}
 					    <a href="{{page.next.url}}" class="siguiente" rel="Siguiente Post {{ page.next.title }}" title="{{ page.next.title }}">Siguiente &raquo;</a>
