--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -15,7 +15,7 @@
 #post-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
 #post-nav div .siguiente {float:right;padding-right:0;}
 #post-nav div .anterior {float:right;}
-
+#post-nav div a i {font-style: normal!important ;}
 /* Posts */
 #post-title, #date, #post-share {text-align: center;}
 #post-video, #post-download, #post-share, #post-header {border:none;}
@@ -75,8 +75,9 @@ h3 a:hover {color: var(--color-link); text-decoration:none;}
 	#rel-content #rel img.thumbnails {width:49%;height:160px;object-fit: cover;padding-right:12px;margin-bottom:12px;}
 	#rel h6 {font-size:19px;line-height:1.3em;}
 	#post-nav div .siguiente, #post-nav div .anterior {display:none;}
-    #post-nav div {	padding: 0 0 0 230px;text-align:left;font-size:13px;}
+    #post-nav div {	padding: 0 0 0 36px;text-align:left;font-size:13px;}
     #post-title {font-size:32px;line-height:39px;}
+    #sitename {display:none;visibility: hidden;}
 }
 @media (max-width: 432px) {
 }
