--- a/_includes/partials/navigation/nav-scroll.html
+++ b/_includes/partials/navigation/nav-scroll.html
@@ -12,8 +12,9 @@
 						<form action="https://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
 							<input type="text" name="q" placeholder="Buscar"> 
-							<input type="submit" name="sa" value="&cirE;"> 
+							<input type="submit" name="sa" value="&cirE;">
 						</form>
+						<em><a href="https://society6.com/videosmanguis" title="Nuestra Tienda Online"><i class="icon-cart"></i></a></em>
 					</div>
 				 </div>
 			</nav>
