--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -9,9 +9,10 @@ text-align: center;}
 #site-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
-#site-nav em a {float:right;position:absolute;right:0;background:transparent;width:52px;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
 #site-nav label:hover {color:var(--color-soft-grey);border:thin solid #353535;}
+#site-nav em a {position:absolute;right:0;background:transparent;width:40px;padding-right:0;}
+#site-nav form {margin-right:50px;}
 #site-nav form input  {border:thin solid var(--color-hardgrey);background:transparent!important;font-weight: lighter ;letter-spacing: 0.05em;}
 #site-nav form input:focus  {background:var(--color-softgrey)  !important;letter-spacing: 0.025em;}
 .cover h2 { letter-spacing: 0.001em;font-weight: normal; }
