--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -90,7 +90,14 @@
 					</article>
 				</section>
 			</div>
-
+			<div id="">
+				<script type="text/javascript"><!--
+				s6_user = "videosmanguis";
+				s6_format = "300x250";
+				//--></script>
+				<script type="text/javascript" src="https://society6.com/js/show_banner.js">
+				</script>
+			</div>
 			{% include partials/credits.html %}
 		</main>
 		{% include partials/footer.html %}
