--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -90,7 +90,7 @@
 					</article>
 				</section>
 			</div>
-			<div id="">
+			<div id="society6">
 				<script type="text/javascript"><!--
 				s6_user = "videosmanguis";
 				s6_format = "300x250";
