--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -4,22 +4,20 @@
   
 <div id="rel-content">
 
-  {% assign maxRelated = 5 %}
-  {% assign minCommonTags =  1 %}
-  {% assign maxRelatedCounter = 0 %}
+{% assign maxRelated = 5 %}
+{% assign minCommonTags =  2 %}
+{% assign maxRelatedCounter = 0 %}
 
- 
-  {% for post in site.posts %}
+{% for post in site.posts %}
 
-   
     {% assign sameTagCount = 0 %}
     {% assign commonTags = '' %}
 
-    {% for tag in post.tags %}
+    {% for category in post.categories %}
       {% if post.url != page.url %}
-        {% if page.tags contains tag %}
+        {% if page.categories contains category %}
           {% assign sameTagCount = sameTagCount | plus: 1 %}
-          {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+          {% capture tagmarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
           {% assign commonTags = commonTags | append: tagmarkup %}
         {% endif %}
       {% endif %}
@@ -39,7 +37,9 @@
         {% break %}
       {% endif %}
     {% endif %}
+
   {% endfor %}
+
 </div>
 
 </div>
