--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -1083,8 +1083,8 @@ dialog,
 	text-align: right;
 	padding: 16px 8px;
 	position: fixed;
-	bottom: -2px; left: 0; right: 0;
-	z-index: 8;
+	bottom: -2px;right: 0;
+	z-index: 8;width:10%;
 }
 #tools-nav {
 	background-color: rgba(0,0,0,.75);
@@ -1093,7 +1093,7 @@ dialog,
 	z-index: 9;
 }
 #tools-check:checked ~ #tools-nav {
-	display: block;
+	display: block;width:100%;
 }
 #tools-nav label,
 #tools-switcher label {
