--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -12,7 +12,7 @@ text-align: center;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
 #site-nav label:hover {color:var(--color-soft-grey);border:thin solid #353535;}
 #site-nav em a {position:absolute;top:0;right:12px;background:transparent;width:40px;padding-right:0;}
-#site-nav em a:hover {color:#fafafa!important;}
+#site-nav em a:hover {color:#fafafa!important;fill:#fafafa!important;stroke:#fafafa!important;}
 #site-nav form {margin-right:50px;}
 #site-nav form input  {border:thin solid var(--color-hardgrey);background:transparent!important;font-weight: lighter ;letter-spacing: 0.05em;}
 #site-nav form input:focus  {background:var(--color-softgrey)  !important;letter-spacing: 0.025em;}
@@ -26,7 +26,7 @@ main {padding-bottom:0!important;}
 #page-header.cover h1 {margin-bottom:3px;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;}
 #page-header.cover h2 small {letter-spacing: 0.015em;}
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
-#cover-logo {position:fixed ;top:69px;left:46.2%;}
+#cover-logo {    position: absolute ;left: 0; right: 0;margin-left: auto; margin-right: auto;width: 100px;}
 img#cover-logo {width:150px!important;height:auto;}
 .text-left {text-align:left;}
 .text-right {text-align:right;}
