--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -26,8 +26,8 @@ main {padding-bottom:0!important;}
 #page-header.cover h1 {margin-bottom:3px;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;}
 #page-header.cover h2 small {letter-spacing: 0.015em;}
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
-#cover-logo {    position: absolute ;left: 0; right: 0;margin-left: auto; margin-right: auto;width: 100px;}
-img#cover-logo {width:150px!important;height:auto;}
+#cover-logo { position: absolute ;left: 0; right: 0;margin-left: auto; margin-right: auto;top:20px;width: 200px;}
+img#cover-logo {width:200px!important;height:auto;}
 .text-left {text-align:left;}
 .text-right {text-align:right;}
 em hr {border-bottom:thin solid #eee;}	
