--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -12,6 +12,7 @@ text-align: center;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
 #site-nav label:hover {color:var(--color-soft-grey);border:thin solid #353535;}
 #site-nav em a {color:var(--color-grey)!important ;position:absolute;top:0;right:12px;background:transparent!important;width:40px;padding-right:0;}
+#site-nav em a:visited {color:var(--color-grey)!important ;}
 #site-nav em a:hover {color:#fafafa!important;fill:#fafafa!important;stroke:#fafafa!important;}
 #site-nav form {margin-right:50px;}
 #site-nav form input  {border:thin solid var(--color-hardgrey);background:transparent!important;font-weight: lighter ;letter-spacing: 0.05em;}
@@ -23,8 +24,8 @@ body {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:non
 p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
-#page-header.cover h1 {margin-bottom:0;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;}
-#page-header.cover h2 small {letter-spacing: 0.015em;}
+#page-header.cover h1 {margin-bottom:0;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;text-shadow:0 3px 7px rgba(0,0,0,.23) ;}
+#page-header.cover h2 small {letter-spacing: 0.015em;text-shadow:0 3px 3px rgba(0,0,0,.23) }
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
 #cover-logo { position: absolute ;left: 0; right: 0;margin-left: auto; margin-right: auto;top:16px;width: 200px;}
 img#cover-logo {width:200px!important;height:auto;}
