--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -5,6 +5,13 @@
 				<section id="follows">
             		{% include svg-icons.html %}
     			</section>
+    			<div id="sitemap">
+    				<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-home"></i>Inicio</a></em>
+    				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
+    				<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
+    				<em><a href="{{ site.baseurl }}" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
+    				<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-cart"></i>Tienda</a></em>
+    			</div>
 				<p>
 				Edición Web: <a href="http://isardmiralles.com/" target="blank" title="Ir a la Web del Diseñador">Isard Miralles</a>
 				CMS: <a href="https://jekyllrb.com/" target="blank" title="Jekyll CMS">Jekyll Now {{ site.version }}</a>
