--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -6,7 +6,7 @@
             		{% include svg-icons.html %}
     			</section>
     			<div id="sitemap">
-    				<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-home"></i>Inicio</a></em>
+    				<a href="{{ site.baseurl }}" title="Página Principal" id="mouse">{{ site.baseurl }}</a>
     				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
     				<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
     				<em><a href="{{ site.baseurl }}" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
