--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -6,11 +6,13 @@
             		{% include svg-icons.html %}
     			</section>
     			<div id="sitemap">
-    				<em><a href="{{ site.baseurl }}" title="Página Principal" id="mouse">{{ site.baseurl }}</a></em>
-    				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
-    				<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
-    				<em><a href="{{ site.baseurl }}" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
-    				<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-cart"></i>Tienda</a></em>
+    				<em><a href="{{ site.baseurl }}" title="Página Principal" id="mouse">www.VideosManguis.net</a></em>
+    				<strong>
+	    				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
+    					<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
+    					<em><a href="{{ site.baseurl }}" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
+    					<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-cart"></i>Tienda</a></em>
+    				</strong>
     			</div>
 				<p>
 				Edición Web: <a href="http://isardmiralles.com/" target="blank" title="Ir a la Web del Diseñador">Isard Miralles</a>
