--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -5,8 +5,8 @@
 				<section id="follows">
             		{% include svg-icons.html %}
     			</section>
+    				<h3><a href="{{ site.baseurl }}" title="Página Principal" id="mouse">www.VideosManguis.net</a></h3>
     			<div id="sitemap">
-    				<em><a href="{{ site.baseurl }}" title="Página Principal" id="mouse">www.VideosManguis.net</a></em>
     				<strong>
 	    				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
     					<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
