--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -102,13 +102,6 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 #coffee {color: var(--color-hardgrey);height:100%;text-align: center !important;}
 #coffee p {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;-o-hyphens:none;hyphens:none;}
 
-/* Footer */ 
-#mouse {font-family:'Mouse Memoirs', sans-serif;font-size: 25px;font-weight: lighter ;letter-spacing: 0.069em;}
-#page-footer {background:#222;color:#999;}
-#page-footer em small a {border: thin solid #222;}
-#web-credits {opacity:.75;background-color:#fafafa;border-bottom: thin solid var(--color-softgrey);border-top:thin solid var(--color-softgrey);}
-#web-credits label svg {max-width:72px;margin:10px;opacity:.6;border-radius:50%;}
-#web-credits label svg:hover {cursor:pointer !important;opacity:1;box-shadow: 0 1px 3px rgba(0,0,0,.3);}
 /* Classic Gallery */
 .listed .img-icon {width:32px;}
 .listed u {margin-left:12px;}
@@ -119,15 +112,23 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 .listed article { border:none;overflow: hidden;width: 100%;display: block;display: inline-block;margin:0!important;padding:0!important;-webkit-column-break-inside: avoid;-moz-column-break-inside:avoid;-moz-page-break-inside:avoid;page-break-inside: avoid;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
-/* Footer */
-main { padding-top:1px;margin-bottom: 0;}
-#page-footer {box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
+/* Footer */ 
+#page-footer {background:#222;color:#999;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
+#page-footer em small a {border: thin solid #222;}
+#web-credits {opacity:.75;background-color:#fafafa;border-bottom: thin solid var(--color-softgrey);border-top:thin solid var(--color-softgrey);}
+#web-credits label svg {max-width:72px;margin:10px;opacity:.6;border-radius:50%;}
+#web-credits label svg:hover {cursor:pointer !important;opacity:1;box-shadow: 0 1px 3px rgba(0,0,0,.3);}
+#mouse {width:100%;font-family:'Mouse Memoirs', sans-serif;}
+#page-footer em #mouse a {font-size: 32px;font-weight: lighter ;letter-spacing: 0.069em;}
+
 #page-footer p {padding-bottom:69px;}
 #page-footer #sitemap {margin-bottom:18px;color:var(--color-grey);}
 #page-footer #sitemap em a {background: transparent!important;font-size:17px;padding:10px 15px 10px 15px;}
 #page-footer #sitemap em a:hover {color:var(--color-link);text-decoration:none;}
 #page-footer #sitemap svg {width:17px;}
 .pagination {display:none;visibility:hidden;}
+
+main { padding-top:1px;margin-bottom: 0;}
 
 @media (max-width: 1250px) {
    	img.dialog-svg {width:80px!important;height:70px;}
