--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -8,10 +8,10 @@
     				<h3><a href="{{ site.baseurl }}" title="Página Principal" id="mouse">www.VideosManguis.net</a></h3>
     			<div id="sitemap">
     				<strong>
-	    				<em><a href="{{ site.baseurl }}" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
-    					<em><a href="{{ site.baseurl }}" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
-    					<em><a href="{{ site.baseurl }}" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
-    					<em><a href="{{ site.baseurl }}" title="Página Principal"><i class="icon-cart"></i>Tienda</a></em>
+	    				<em><a href="{{ site.baseurl }}/blog/categories" title="Contenido por Categorías"><i class="icon-search"></i>Categorías</a></em>
+    					<em><a href="{{ site.baseurl }}/blog/tags" title="Tags o Etiquetas"><i class="icon-tag"></i>Etiquetas</a></em>
+    					<em><a href="{{ site.baseurl }}/nosotras" title="Más Sobre Videos Manguis"><i class="icon-support"></i>Nosotras</a></em>
+    					<em><a href="https://society6.com/videosmanguis" title="Nuestra Tienda en casa de Videos Manguis"><i class="icon-cart"></i>Tienda</a></em>
     				</strong>
     			</div>
     			<hr>
