--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -125,7 +125,7 @@ em small #go-up:hover {background:rgba(0,0,0,.3); }
 #page-footer p {padding-bottom:69px;}
 #page-footer #sitemap {color:var(--color-grey);width:100%;}
 #page-footer #sitemap strong {display:inline-block;text-align: center;}
-#page-footer #sitemap strong em a {background: transparent!important;font-size:17px;padding:10px 15px 10px 15px;}
+#page-footer #sitemap strong em a {background: transparent!important;font-size:17px;padding:10px 15px 10px 15px;letter-spacing: 0.069em;}
 #page-footer #sitemap strong em a:hover {color:var(--color-link);text-decoration:none;}
 #page-footer #sitemap svg {width:17px;}
 .pagination {display:none;visibility:hidden;}
@@ -147,6 +147,8 @@ main { padding-top:1px;margin-bottom: 0;}
     aside.thumb-3 a {font-size:18px;}
     aside.thumb-3 a svg {width:23px;}
     aside.thumb-3 p {margin:1em 0 1em 0;border-bottom: thin solid #eee;}
+	#page-footer #sitemap strong em a {font-size:17px;padding:8px 12px 8px 12px;letter-spacing: 0.032em;}
+    #page-footer #sitemap svg {width:17px;}
 }
 @media (max-width: 1242px) {
     .lab-post, cat-post {height:75px;width:100%;margin-right:0%;max-height:75px;}
@@ -176,13 +178,18 @@ main { padding-top:1px;margin-bottom: 0;}
     main { margin-bottom: 360px;}
     .cat-post {height:110px;width:100%;float:none;}
     .cell-6, .pushed-6 {width:85%;margin-left:8% !important;}
-    #coffee .thumb-2 {width: 90%!important;}
-    #coffee .pushed-5 {margin-left:5%!important;}
+	#page-footer #sitemap strong em a {font-size:15px;padding:15px 0 15px 0;letter-spacing: 0.069em;width:25%;}
+    #page-footer #sitemap svg {width:100%;}
     #icons a {width:15%;padding:12px;border-radius:2px;}
+    #page-footer h3 a {font-size: 30px;line-height:1.5;letter-spacing: 0.10em;}
+	#page-footer h3 a:hover {font-size: 36px;line-height:1.0;letter-spacing: 0.16em;}
 }
 
 @media (max-width: 432px) {
     .cover#page-header h1 {font-size:52px;line-height:1.4em;}
     .cover#page-header h2 {font-size:40px;line-height:.25;}
+    #page-footer #sitemap strong em a {font-size:16px;padding:12px 0 12px 0;letter-spacing: 0.069em;width:50%;}
 	#icons a {width:18%;padding:8px;}
+    #page-footer h3 a {font-size: 23px;line-height:1.5;letter-spacing: 0.15em;}
+	#page-footer h3 a:hover {font-size: 28px;line-height:1.0;letter-spacing: 0.16em;}
 }			
