--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -112,6 +112,14 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 .listed article { border:none;overflow: hidden;width: 100%;display: block;display: inline-block;margin:0!important;padding:0!important;-webkit-column-break-inside: avoid;-moz-column-break-inside:avoid;-moz-page-break-inside:avoid;page-break-inside: avoid;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
+
+/* SEARCH */
+.buscar#page-header {background-image: url("/img/texture/h_seamless.png");background-size:400px 400px;background-repeat: repeat;image-rendering: crisp-edges;border:none!important;box-shadow:inset 0 0 6px rgba(0,0,0,.12);}
+.buscar#page-header h1 {font-family:'Mouse Memoirs', sans-serif;font-weight: lighter ;}
+.buscar form input  {border:2px solid var(--color-softgrey);background:var(--color-white)!important;font-size:25px;height:46px;border-radius:32px;padding:0 23px 0 23px;}
+.buscar form input submit {color:#cc0000;}
+.buscar form input:focus  {background:var(--color-softgrey)  !important;letter-spacing: 0.025em;}
+
 /* Footer */ 
 #page-footer {background:#222;color:#999;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
 #page-footer em small a {border: thin solid #222;}
