--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -1,16 +1,8 @@
         <header  id="page-header" class="buscar anm-fadeIn delay-300 slow">
 				<h1 class="anm-moveFromBottom delay-300 slow">Buscar</h1>
-<script>
-  (function() {
-    var cx = 'partner-pub-2493257171023914:8890185994';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:searchbox-only></gcse:searchbox-only>
-
+						<form action="https://www.google.com/cse"> 
+							<input type="hidden" name="cx" value="partner-pub-2493257171023914:6177620106"> 
+							<input type="text" name="q" placeholder="Buscar"> 
+							<input type="submit" name="sa" value="&cirE;"> 
+						</form>
 		</header>
