--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -5,4 +5,5 @@
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
+						<gcse:searchbox-only resultsUrl="{{ site.baseurl }}/buscar"></gcse:searchbox>
 		</header>
