--- a/_includes/partials/navigation/nav-scroll.html
+++ b/_includes/partials/navigation/nav-scroll.html
@@ -10,10 +10,11 @@
 						<a href="{{ site.baseurl }}/blog/categories" title="clasificado por categorías">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Todo sobre las Vacas Manguis">Nosotras</a>
 						<form action="https://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:6177620106"> 
+							<input type="hidden" name="cx" value="partner-pub-2493257171023914:5113089481"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;">
 						</form>
+						<gcse:searchbox-only></gcse:searchbox-only>
 					</div>
 						<em><a href="https://society6.com/videosmanguis" target="blank" title="Visita Nuestra Tienda Online"><i class="icon-cart"></i></a></em>
 				 </div>
