--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -1,7 +1,7 @@
         <header  id="page-header" class="buscar anm-fadeIn delay-300 slow">
 				<h1 class="anm-moveFromBottom delay-300 slow">Buscar</h1>
-						<form action="https://cse.google.com:443/cse/publicurl?cx=partner-pub-2493257171023914:5113089481"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:6177620106"> 
+						<form action="https://www.google.com/cse"> 
+							<input type="hidden" name="cx" value="partner-pub-2493257171023914:5113089481"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
