--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -9,10 +9,10 @@
 						<a href="{{ site.baseurl }}/" title="Volver al Inicio"><b>{{ site.name }}.net</b></a>
 						<a href="{{ site.baseurl }}/blog/categories" title="clasificado por categorías">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Todo sobre las Vacas Manguis">Nosotras</a>
-						<form action="https://cse.google.com:443/cse/publicurl?cx=partner-pub-2493257171023914:5113089481"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:5113089481"> 
+						<form action="https://www.google.com/cse"> 
+							<input type="hidden" name="cx" value="001251290766013693580:1biecpywwe8"> 
 							<input type="text" name="q" placeholder="Buscar"> 
-							<input type="submit" name="sa" value="&cirE;"> 
+							<input type="submit" name="sa" value="&cirE;">
 						</form>
 					</div>
 						<em><a href="https://society6.com/videosmanguis" target="blank" title="Visita Nuestra Tienda Online"><i class="icon-cart"></i></a></em>
