--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -5,4 +5,16 @@
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
+<script>
+  (function() {
+    var cx = '001251290766013693580:1biecpywwe8';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:searchbox></gcse:searchbox>
 		</header>
