--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -1,20 +1,8 @@
         <header  id="page-header" class="buscar anm-fadeIn delay-300 slow">
 				<h1 class="anm-moveFromBottom delay-300 slow">Buscar</h1>
 						<form action="https://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:5113089481"> 
+							<input type="hidden" name="cx" value="001251290766013693580:1biecpywwe8"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
-<script>
-  (function() {
-    var cx = '001251290766013693580:1biecpywwe8';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:searchbox></gcse:searchbox>
 		</header>
