--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -9,7 +9,7 @@
 						<a href="{{ site.baseurl }}/" title="Volver al Inicio"><b>{{ site.name }}.net</b></a>
 						<a href="{{ site.baseurl }}/blog/categories" title="clasificado por categorías">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Todo sobre las Vacas Manguis">Nosotras</a>
-						<form action="https://www.google.com/cse"> 
+						<form action="https://cse.google.com/cse.js?cx="> 
 							<input type="hidden" name="cx" value="001251290766013693580:1biecpywwe8"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;">
