--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -1,6 +1,6 @@
         <header  id="page-header" class="buscar anm-fadeIn delay-300 slow">
 				<h1 class="anm-moveFromBottom delay-300 slow">Buscar</h1>
-						<form action="https://cse.google.com/cse.js?cx="> 
+						<form action="https://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="001251290766013693580:1biecpywwe8"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
