--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -6,7 +6,7 @@ text-align: center;}
 /* Nav */
 #site-nav {background: var(--color-soft-black) !important;border-bottom: none;font-size: 17px;color: var(--color-grey);}
 #site-nav a b {font-family:'Mouse Memoirs', sans-serif;font-size: 26px;font-weight: lighter ;letter-spacing: 0.032em;}
-#site-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;}
+#site-nav a {color:var(--color-grey)!important;font-weight: bold ;border: none;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
@@ -17,6 +17,7 @@ text-align: center;}
 #site-nav form {margin-right:50px;}
 #site-nav form input  {border:thin solid var(--color-hardgrey);background:transparent!important;font-weight: lighter ;letter-spacing: 0.05em;}
 #site-nav form input:focus  {background:var(--color-softgrey)  !important;letter-spacing: 0.025em;}
+#site-nav img {width:46px;height:46px;}
 .cover h2 { letter-spacing: 0.001em;font-weight: normal; }
 #coffee h2 {margin:0;}
 .sticky-none#site-nav {position:relative!important;z-index:4!important;}
