--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 						</figure>
 					</div>
 					<figure id="post-img">
-						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" rel="{% for tag in page.tags %} {{ tag }}, {% endfor %}">
+						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" alt="{% for tag in page.tags %} {{ tag }}, {% endfor %}">
 					</figure>
 	    			{{ content }}
 				</div>
