--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+posting: true
 ---
 
 	<header id="post-header" class="head-band anm-moveFromLeft">
@@ -34,7 +35,7 @@ layout: default
 					{% include share.html %}
 				</aside>
 				<div id="date">
-    				<p>Publicat el {{ page.date | date: "%e %B , %Y" }}</p>
+    				<p>Publicat el {{ page.date | date: '%Y-%m-%d' }}</p>
   				</div>
   				<hr>
 				<div class="PageNavigation">
