--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
 </script>
 {% endif %}
 
-{% if page.posting %}
+{% if page.img %}
   {% assign items = "" %}
   {% for post in site.posts %}
     {% capture list_item %}
