--- a/_includes/structuredData.html
+++ b/_includes/structuredData.html
@@ -35,7 +35,7 @@
    },
    "image":{  
       "@type":"ImageObject",
-      "contentUrl":"http://videosmanguis.net/hipertextos/brand/cardboard.jpg",
+      "contentUrl":"https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg",
       "url":"http://videosmanguis.net",
       "height":"450",
       "width":"1000"
