--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Mouse+Memoirs" rel="stylesheet">
     {% include favicons.html %}
 
-	{% if page.home %}
 	 <link rel="prefetch" href="{{ site.baseurl }}nosotras">
-	{% endif %}
 		
-	{% if page.comments %}
+	{% if page.posting %}
 	 <link rel="prefetch" href="{{page.next.url}}">
 	 <link rel="prefetch" href="{{page.previous.url}}">
 	{% endif %}
