--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,11 +3,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 	<link rel="canonical" href="http://videosmanguis.net/"/>
-	<link rel="prefetch" href="{{ site.baseurl }}nosotras">
+	<link rel="prerender" href="{{ site.baseurl }}nosotras">
 		
 	{% if page.posting %}
-	 <link rel="prefetch" href="{{page.next.url}}">
-	 <link rel="prefetch" href="{{page.previous.url}}">
+	 <link rel="prerender" href="{{page.next.url}}">
+	 <link rel="prerender" href="{{page.previous.url}}">
 	{% endif %}
 		
 	<meta name="distribution" content="global"/>
