--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,9 +1,11 @@
     <meta name="encoding" charset="utf-8" />
+	<!-- Actualiza la etiqueta <html> con include de itemscope y itemtype attributes. -->
+	<html itemscope itemtype="<a href="http://schema.org/Article">http://schema.org/Article</a>">
+
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-	<link rel="canonical" href="http://videosmanguis.net/"/>
-	<link rel="prerender" href="{{ site.baseurl }}nosotras">
+	<link rel="canonical" href="http://www.videosmanguis.net/"/>
 		
 	{% if page.posting %}
 	 <link rel="prerender" href="{{page.next.url}}">
@@ -25,14 +27,54 @@
 	<meta name="ICBM" content="41.4470282;2.2413973" />
 		
     {% if page.excerpt %}
+    <meta itemprop="name" content="{% if page.title %}{{ page.title }}{% endif %}">
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
+    <meta itemprop="description" content="{{ page.excerpt| strip_html }}">
     <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+    <meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
+	<meta name="twitter:title" content="{{ page.title }}">
+	<meta name="twitter:description" content="Descripcion que no supere los 200 caracteres">
+	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
+	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
+	<meta name="twitter:image:src" content="{{ site.baseurl }}{{ post.url }}">
+	<!-- Open Graph data -->
+	<meta property="og:title" content="{{ page.title }}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content=" {{ site.baseurl }}" />
+	<meta property="og:image" content=" http://example.com/image.jpg" />
+	<meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+	<meta property="og:site_name" content="{{ site.baseurl }}, i.e. Moz" />
+	<meta property="article:published_time" content="{{ site.date }}" />
+	<meta property="article:modified_time" content="{{ page.date }}" />
+	<meta property="article:section" content="Post" />
+	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %}" />
+	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
     {% else %}
+    <meta itemprop="name" content="{{ page.title }}{{ site.name }}">
     <meta name="description" content="{{ site.description }}" />
+    <meta itemprop="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney">
     <meta property="og:description" content="{{ site.description }}" />
-    {% endif %}
-
-    {% if page.title %}
-    <meta property="og:title" content="{{ page.title }}" />
-    <meta property="twitter:title" content="{{ page.title }}" />
+    <meta itemprop="image" content="{{ site.baseurl }}/hipertextos/brand/cover.png">
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="{{ site.baseurl }}/hipertextos/brand/cover.png">
+	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
+	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
+	<meta name="twitter:description" content="Descripcion que no supere los 200 caracteres">
+	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
+	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
+	<meta name="twitter:image:src" content="{{ site.baseurl }}">
+	<!-- Open Graph data -->
+	<meta property="og:title" content="{{ site.name }}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content=" {{ site.baseurl }}" />
+	<meta property="og:image" content=" {{ site.baseurl }}/hipertextos/brand/cover.png" />
+	<meta property="og:description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
+	<meta property="og:site_name" content="{{ site.baseurl }}, i.e. Moz" />
+	<meta property="article:published_time" content="{{ site.date }}" />
+	<meta property="article:modified_time" content="{{ page.date }}" />
+	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} Videos Manguis, humor, videos graciosos, videos divertidos, notícias, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber, youtube, vacas manguis" />
+	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
     {% endif %}
